--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "POPKID MD",
-  "version": "1.0.0",
+  "name": "POPKID-MD",
+  "version": "3.0.0",
   "description": "A WhatsApp Bot Created By Popkid",
   "main": "index.js",
   "scripts": {
@@ -8,13 +8,15 @@
     "stop": "pm2 stop ZIPPY-XTECH",
     "restart": "pm2 restart ZIPPY-XTECH"
   },
-   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
+  "dependencies": {
+    "@whiskeysockets/baileys": "6.7.9",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@vitalets/google-translate-api": "^9.2.0",
+    "@dark-yasiya/scrap":"1.0.1",    
     "pino": "^7.0.5",
-    "pm2": "^5.2.0",
+    "pm2": "^6.0.5",
     "util": "^0.12.4",
     "express": "latest",
     "axios": "^1.2.5",
@@ -32,15 +34,19 @@
     "node-fetch": "^2.6.1",
     "btch-downloader": "^2.2.9",
     "megajs": "^1.1.0",
+    "pdfkit": "^0.14.0",
     "wa_set_pkg": "1.0.5",
     "wa-sticker-formatter": "^4.4.4",
     "path": "^0.12.7",
     "vm": "^0.1.0",
+    "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0-rc.12",
     "ruhend-scraper" : "8.0.3",
     "qrcode-terminal": "^0.12.0",
-    "wikipedia":"2.1.2",
     "yt-search":"2.11.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
+    "vm": "^0.1.0",
     "api-dylux":"1.8.5",
     "@mrnima/tiktok-downloader":"1.0.0",
     "@mrnima/facebook-downloader":"1.0.0",
