--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "POPKID-MD",
-  "version": "3.0.0",
-  "description": "A WhatsApp Bot Created By Popkid",
+  "version": "4.0.0",
+  "description": "A WhatsApp Bot Created By popkid",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name ZIPPY-XTECH",
-    "stop": "pm2 stop ZIPPY-XTECH",
-    "restart": "pm2 restart ZIPPY-XTECH"
+    "start": "pm2 start index.js --deep-monitoring --attach --name POPKID-MD",
+    "stop": "pm2 stop POPKID-MD",
+    "restart": "pm2 restart POPKID-MD"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
@@ -19,6 +19,7 @@
     "pm2": "^6.0.5",
     "util": "^0.12.4",
     "express": "latest",
+    "moment-timezone": "^0.5.45",
     "axios": "^1.2.5",
     "crypto-digest-sync": "^1.0.0",
     "crypto-js": "latest",
