--- a/package.json
+++ b/package.json
@@ -1,53 +1,56 @@
 {
-  "name": "POPKID-XMD",
-  "version": "2.4.1",
-  "description": "The best Whatsapp bot in Kenya",
+  "name": "POPKID-MD",
+  "version": "4.5.0",
+  "description": "A WhatsApp Bot Created By Popkidxtech",
   "main": "index.js",
-  "engines": {
-    "node": ">= 20.x",
-    "npm": ">= 10.x"
-  },
   "scripts": {
-    "start": "node index.js"
+    "start": "pm2 start index.js --deep-monitoring --attach --name POPKID-MD",
+    "stop": "pm2 stop POPKID-MD",
+    "restart": "pm2 restart POPKID-MD"
   },
-  "author": "popkid",
-  "license": "MIT",
   "dependencies": {
-    "baileys-mod": "latest",
-    "@octokit/rest": "^21.1.0",
-    "acrcloud": "^1.4.0",
-    "awesome-phonenumber": "^7.2.0",
-    "axios": "^1.7.9",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
+    "@adiwajshing/keyed-db": "^0.2.4",
+    "@dark-yasiya/yt-dl.js": "1.0.5",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@vitalets/google-translate-api": "^9.2.0",
+    "@dark-yasiya/scrap":"1.0.1",    
+    "pino": "^7.0.5",
     "pm2": "^6.0.5",
-    "dotenv": "16.5.0",
-    "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
-    "check-disk-space": "^3.3.1",
-    "express": "^4.19.2",
+    "util": "^0.12.4",
+    "express": "latest",
+    "moment-timezone": "^0.5.45",
+    "axios": "^1.2.5",
+    "crypto-digest-sync": "^1.0.0",
+    "crypto-js": "latest",
+    "file_size_url": "1.0.4",
+    "fs-extra": "^11.1.0",
+    "fs": "^0.0.1-security",
+    "ffmpeg": "^0.0.4",
     "file-type": "^16.5.3",
-    "figlet": "^1.7.0",
-    "fluent-ffmpeg": "^2.1.3",
+    "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "google-tts-api": "^2.0.2",
-    "javascript-obfuscator": "^4.0.0",
-    "human-readable": "^0.2.1",
-    "https": "^1.0.0",
-    "jimp": "^0.16.13",
-    "lodash": "latest",
-    "lolcatjs": "^2.4.1",
-    "megajs": "^1.3.2",
-    "moment-timezone": "^0.5.45",
-    "node-cache": "^5.1.2",
+    "path": "^0.12.7",
+    "node-fetch": "^2.6.1",
+    "btch-downloader": "^2.2.9",
+    "megajs": "^1.1.0",
+    "pdfkit": "^0.14.0",
+    "wa_set_pkg": "1.0.5",
+    "wa-sticker-formatter": "^4.4.4",
+    "path": "^0.12.7",
+    "vm": "^0.1.0",
     "adm-zip": "^0.5.16",
-    "node-fetch": "^2.7.0",
-    "node-os-utils": "^1.3.6",
-    "node-webpmux": "^3.1.0",
-    "os": "^0.1.1",
-    "perf_hooks": "0.0.1",
-    "performance-now": "^2.1.0",
-    "pino": "^8.14.1",
-    "steno": "^1.0.0",
-    "yargs": "^17.7.2",
-    "yt-search": "^2.10.4"
+    "cheerio": "^1.0.0-rc.12",
+    "ruhend-scraper" : "8.0.3",
+    "qrcode-terminal": "^0.12.0",
+    "yt-search":"2.11.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
+    "vm": "^0.1.0",
+    "api-dylux":"1.8.5",
+    "@mrnima/tiktok-downloader":"1.0.0",
+    "@mrnima/facebook-downloader":"1.0.0",
+    "mrnima-moviedl":"1.0.0"
   }
 }
